# titan-implementation

./: Cargo.toml  README.md
src/: arkpallastypes.rs  dory.rs  group_sumcheck.rs  group_whir_committer.rs  main.rs  multilinear.rs  pastatypes.rs  r1cs.rs  spartan.rs  titantranscript.rs  traits.rs  utils.rs
src/benchmarking/: benchmarking steps.txt  brakedown_clean.csv  brakedown_hyrax_benchmarking_steps.txt  comparision_table_csv_to_tex.py  comparison_table.csv  dory_BLS_clean.csv  hyrax_clean.csv  kopis_clean.csv  titan-params.txt  titan.csv  titan_12t_clean.csv  titan_16t_clean.csv  titan_4t_clean.csv  titan_8t_clean.csv  titan_benchmark.sh  titan_clean.csv  titan_plots.py  titan_t_plots.py  whir_clean.csv  whirpcs.sh
src/merkle_tree/: blake3.rs  digest.rs  keccak.rs  mod.rs  parameters.rs  proof.rs  sha256.rs
src/protocols/: field_sumcheck.rs  groupbulletproof.rs  kopis_pcs.rs  mod.rs  setup.rs  spartan_titan.rs  sumcheck.rs  titanpcs.rs
