[package]
name = "titan"
version = "0.1.0"
edition = "2021"

[dependencies]
pasta-msm = { git = "https://github.com/supranational/pasta-msm" }
pasta_curves = "0.5"
rand = "0.8"
anyhow = "1.0"
ark-ff = "0.5"
ark-poly = "0.5"
ark-std = { version = "0.5", features = ["std"] }
ark-pallas = "0.5"
merlin="1.3.0"
ff = "0.13.1"
ark-crypto-primitives = { version = "0.5.0", features = ["merkle_tree"] }
ark-serialize = "0.5.0"
serde = { version = "1.0.228", features = ["derive"] }
sha2 = "0.10.9"
blake3 = "1.8.2"
sha3 = "0.10.8"
dory-pcs = { version = "0.1", features = ["backends", "cache"] }
ark-ec = "0.5"
ark-bls12-381 = "0.5.0"
quarks-zk = "0.1.5"
rayon="1.11.0"
spartan = "0.9.0"
bincode = "1.3"
merlin3 = { package = "merlin", version = "3.0" }



